@@ -1,11 +1,12 @@
 # sample configuration file for clock_sensor.py running on ESP32 
-# with a BME280 sensor and a 20x4 display
+# with a BME280 sensor, a 20x4 display and a remote sensor on
+# http://192.168.12.172/cgi-bin/weather
 
 I2C_BUS = 0
 I2C_PIN_SDA = 21
 I2C_PIN_SCL = 22
 DISPLAY_I2C_ADDR = 0x27
-DISPLAY_MODE = 1
+DISPLAY_MODE = 2
 DISPLAY_INTERVAL = 1
 SENSOR_I2C_ADDR = 0x77
 SENSOR_INTERVAL = 5
@@ -16,4 +17,7 @@ NTP_INTERVAL = 300
 WEBSRV_PATH = /cgi-bin/weather
 WEBSRV_PORT = 80
 WEBSRV_TIMEOUT = 10000
+REMOTE_HOST = 192.168.12.172
+REMOTE_PATH = /cgi-bin/weather
+REMOTE_INTERVAL = 5
 TICK_PERIOD = 1000
