@@ -16,4 +16,7 @@ NTP_INTERVAL = 300
 WEBSRV_PATH = /cgi-bin/weather
 WEBSRV_PORT = 80
 WEBSRV_TIMEOUT = 10000
+REMOTE_HOST =
+REMOTE_PATH =
+REMOTE_INTERVAL = 0
 TICK_PERIOD = 1000
